@@ -7,6 +7,7 @@ version <next>:
 - DTS lossless extension (XLL) decoding (not lossless, disabled by default)
 - showwavespic filter
 - libdcadec wrapper
+- Drop support for nvenc API before 5.0
 
 
 version 2.6:
